modules/security_groups/main.tf
# 1. SG para el Load Balancer (Acceso público)
resource "aws_security_group" "alb" {
  name        = "${var.environment}-alb-sg"
  description = "Permite trafico HTTP entrante desde internet"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    name        = "csgtest"
    Environment = var.environment
  }
}

# 2. SG para las tareas de ECS (Acceso solo desde el ALB)
resource "aws_security_group" "ecs" {
  name        = "${var.environment}-ecs-sg"
  description = "Permite trafico entrante solo desde el ALB"
  vpc_id      = var.vpc_id

  ingress {
    from_port       = 3000
    to_port         = 3000
    protocol        = "tcp"
    security_groups = [aws_security_group.alb.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    name        = "csgtest"
    Environment = var.environment
  }
}

# Security Group para RDS
resource "aws_security_group" "rds" {
  
  name_prefix = "rds-sg-" 
  description = "Permitir trafico desde ECS hacia RDS"
  vpc_id      = var.vpc_id

  ingress {
    description     = "PostgreSQL desde ECS"
    from_port       = 5432
    to_port         = 5432
    protocol        = "tcp"
    security_groups = [aws_security_group.ecs.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  lifecycle {
    create_before_destroy = true
  }

  tags = {
    name = "csgtest"
  }
}
